SC-1474: fix column drop down clipped in Styleguide list

--- a/sugarcrm/styleguide/less/sugar-specific/datatables.less
+++ b/sugarcrm/styleguide/less/sugar-specific/datatables.less
@@ -382,7 +382,9 @@ table.dataTable {
 /* ---------
 FLEXLIST GENERIC */
 .flex-list-view {
-
+  .flex-list-view-content {
+    overflow-y: visible;
+  }
   /*DUPLICATES*/
   table.dataTable.duplicates {
     thead > tr > th:last-child {
@@ -656,7 +658,7 @@ FLEXLIST GENERIC */
   .flex-list-view {
     position: relative;
     .flex-list-view-content {
-      overflow-y: auto;
+      overflow-y: visible;
       width: 100%;
     }
 
